# ROS_system

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml  setup.py
launch/: controller.launch  default.launch  hardwareConnect.launch  hid2udp.launch  mazeLaunch.launch  modelBringup.launch  robotarm.launch
models/: ConjoinedBase.dae
msg/: PlayerState.msg  hapticForce.msg  udpMessage.msg  udpTorque.msg
raw_motion_data/: .~lock.left.csv#
scripts/: hid2udp.sh  temp.launch
src/communication/: UDP.py  torque_server.py  udp_node.py  udp_server.py
src/controller_nodes/: GravityController.py  HapticController.py
src/controllers/: CompensationController.py  DMPController.py  DMP_Controller.py  EnviromentDynamics.py  GravityCompensationController.py  HapticController.py  InverseDynamicsController.py  PDController.py  PlayerModel.py  PotentialFunctions.py  Potential_force.py  WallForces.py
src/filters/: FilterJoints.py  MeanFilter.py
src/games/: StrokeGame.py  pong.py  pong_node.py
src/games/maze/: App.py  EnviromentDynamics.py  Maze.py  MazeGame.py  MazeSolver.py  Player.py  a_star_segments.py  collision_test.py  mazeBank.py  maze_helper.py  maze_node.py
src/haptics/: EnviromentDynamics.py
src/models/: PlayerModel.py
src/tests/: joint_speed_test.py  maze_test.py  sinwave.py  test.py  udp_test.py
src/tools/: PlotArm.py  Robot.py  dynamics.py  helper.py  joint_states_listener.py  plotarm_node.py  recorder.py  train_dmp.py
srv/: UDPMessage.srv
urdf/: hephaestus.urdf.xacro  robot_description.urdf  strokearm.urdf.xacro
xml_motion_data/: down_left_x.xml  down_left_y.xml  down_left_z.xml  down_right_x.xml  down_right_y.xml  down_right_z.xml  down_x.xml  down_y.xml  down_z.xml  left_down_x.xml  left_down_y.xml  left_down_z.xml  left_up_x.xml  left_up_y.xml  left_up_z.xml  left_x.xml  left_y.xml  left_z.xml  right_down_x.xml  right_down_y.xml  right_down_z.xml  right_up_x.xml  right_up_y.xml  right_up_z.xml  right_x.xml  right_y.xml  right_z.xml  up_left_x.xml  up_left_y.xml  up_left_z.xml  up_right_x.xml  up_right_y.xml  up_right_z.xml  up_x.xml  up_y.xml  up_z.xml
(+4 files in other folders)
